# tiny_denoiser

./: .gitignore  CMakeLists.txt  Graph.src  Kconfig  Makefile  README.md  dac.c  dac.h  denoiser.c  denoiser.h  denoiser_GRU.h  denoiser_dns.h  gaptest.yml  istft_window.h  mfcc_model.mk  sdk.config  ssm6515.c  ssm6515.h  ssm6515_register_map.h  stft_model.mk  test_model.ipynb
BUILD_MODEL_8BIT/: GenTile  denoiserKernels.c  denoiserKernels.h  denoiserModel.c
BUILD_MODEL_8BIT/tensors/: S102_Conv_221_weights.tensor  S103_Constant_decoder.0.4.bias.tensor  S104_Mul_scale.tensor  S104_Mul_shift.tensor  S106_Infos.tensor  S108_Conv_234_weights.tensor  S109_Constant_decoder.1.0.bias.tensor  S110_Mul_scale.tensor  S110_Mul_shift.tensor  S116_Conv_280_weights.tensor  S117_Constant_decoder.1.4.bias.tensor  S118_Mul_scale.tensor  S118_Mul_shift.tensor  S120_Infos.tensor  S122_Conv_293_weights.tensor  S123_Constant_decoder.2.0.bias.tensor  S124_Mul_scale.tensor  S124_Mul_shift.tensor  S130_Conv_339_weights.tensor  S131_Constant_decoder.2.4.bias.tensor  S132_Mul_scale.tensor  S132_Mul_shift.tensor  S134_Infos.tensor  S136_Conv_352_weights.tensor  S137_Constant_decoder.3.0.bias.tensor  S138_Mul_scale.tensor  S138_Mul_shift.tensor  S13_Conv_4_weights.tensor  S144_Conv_398_weights.tensor  S145_Constant_decoder.3.4.bias.tensor  S146_Mul_scale.tensor  S146_Mul_shift.tensor  S148_Infos.tensor  S14_Constant_encoder.1.0.bias.tensor  S150_Conv_411_weights.tensor  S151_Constant_decoder.4.0.bias.tensor  S152_Mul_scale.tensor  S152_Mul_shift.tensor  S158_Conv_457_weights.tensor  S15_Mul_scale.tensor  (+60 more)
common/: model_decl.mk  model_rules.mk  wavIO.c  wavIO.h
model/: MEL_params.h  MELmodel.c  MelConfig.json  STFTModel.c  STFT_params.h  denoiser_GRU_stats.pickle  denoiser_dns_stats.pickle  nntool_script  nntool_script_bfp16  nntool_script_fp16  nntool_script_fp16_gru  nntool_script_ne16  nntool_script_params
model/nntool_scripts/: apply_quant.py  collect_stats.py  nntool_quant_int.py  nntool_script_8  nntool_script_bfp16  nntool_script_demo  nntool_script_demo_mixed_precision  nntool_script_fp16  nntool_script_fp16_demo  nntool_script_fp16_gru  nntool_script_fp16_mixed  nntool_script_fp16_mixed_demo  nntool_script_fp16_mixed_gru  nntool_script_int8  nntool_script_int8_gru  nntool_script_ne16  nntool_script_ne16_gru
samples/: golden_sample_0000.h
test_accuracy/: accuracy_nntool.py  adapt_samplerate.py  analyse_weights_sparsity.py  denoiser_utils.py  run_all.sh  test_GAP.py  test_nntool.py  test_nntool_pesq_stoi.py  test_pesq_dataset.py
test_nntool/: test.py
